Bug 381940 - Stroke features window doesn't show up until pressing fill again.
Summary: Stroke features window doesn't show up until pressing fill again.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 21:57 UTC by wolthera
Modified: 2018-02-23 16:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 21:57:32 UTC
When having a stroked shape selected with the shape selection tool, the extra features like dash, markers, other stroe config, don't show up in the tools options until you re-press the one of the filling options.
Comment 1 Dmitry Kazakov 2018-02-23 16:04:10 UTC
Git commit a435ab5f3c049e0b85efdc40c00e98471f80947f by Dmitry Kazakov.
Committed on 23/02/2018 at 16:03.
Pushed by dkazakov into branch 'master'.

Fix order of signals in shape stroke config widget

M  +14   -7    libs/ui/widgets/KoFillConfigWidget.cpp
M  +10   -1    libs/ui/widgets/KoFillConfigWidget.h
M  +6    -3    libs/ui/widgets/KoStrokeConfigWidget.cpp
M  +1    -1    plugins/tools/defaulttool/defaulttool/DefaultToolTabbedWidget.cpp

https://commits.kde.org/krita/a435ab5f3c049e0b85efdc40c00e98471f80947f