Fix order of signals in shape stroke config widget

BUG:381940